syntax = "proto3";

package word_counter;

service Counter {
    rpc Count (WordCountRequest) returns (WordCountResponse);
}

message WordCountRequest {
    string word = 1;
    string file_name = 2;
}

message WordCountResponse {
    int64 count = 1;
    int64 status_code = 254;
    string status_message = 255;
    string log_id = 256;
}
